htfixlib/.externalNativeBuild/ndkBuild/debug/arm64-v8a/android_gradle_build_yahfa_arm64-v8a.stderr.txt
E:/workspace/android/github-source/hook/HTFix/htfixlib/src/main/jni/HookMain.c:10:5: error: expected identifier
    __ANDROID_API_L__ = 21,
    ^
E:/workspace/android/android-sdk-windows/ndk-bundle/build//../sysroot/usr/include\android/api-level.h:54:27: note: expanded from macro '__ANDROID_API_L__'
#define __ANDROID_API_L__ 21
                          ^
E:/workspace/android/github-source/hook/HTFix/htfixlib/src/main/jni/HookMain.c:11:5: error: expected identifier
    __ANDROID_API_L_MR1__,
    ^
E:/workspace/android/android-sdk-windows/ndk-bundle/build//../sysroot/usr/include\android/api-level.h:55:31: note: expanded from macro '__ANDROID_API_L_MR1__'
#define __ANDROID_API_L_MR1__ 22
                              ^
E:/workspace/android/github-source/hook/HTFix/htfixlib/src/main/jni/HookMain.c:12:5: error: expected identifier
    __ANDROID_API_M__,
    ^
E:/workspace/android/android-sdk-windows/ndk-bundle/build//../sysroot/usr/include\android/api-level.h:56:27: note: expanded from macro '__ANDROID_API_M__'
#define __ANDROID_API_M__ 23
                          ^
E:/workspace/android/github-source/hook/HTFix/htfixlib/src/main/jni/HookMain.c:13:5: error: expected identifier
    __ANDROID_API_N__,
    ^
E:/workspace/android/android-sdk-windows/ndk-bundle/build//../sysroot/usr/include\android/api-level.h:57:27: note: expanded from macro '__ANDROID_API_N__'
#define __ANDROID_API_N__ 24
                          ^
E:/workspace/android/github-source/hook/HTFix/htfixlib/src/main/jni/HookMain.c:14:5: error: expected identifier
    __ANDROID_API_N_MR1__,
    ^
E:/workspace/android/android-sdk-windows/ndk-bundle/build//../sysroot/usr/include\android/api-level.h:58:31: note: expanded from macro '__ANDROID_API_N_MR1__'
#define __ANDROID_API_N_MR1__ 25
                              ^
E:/workspace/android/github-source/hook/HTFix/htfixlib/src/main/jni/HookMain.c:15:5: error: expected identifier
    __ANDROID_API_O__,  // Android 8.0
    ^
E:/workspace/android/android-sdk-windows/ndk-bundle/build//../sysroot/usr/include\android/api-level.h:59:27: note: expanded from macro '__ANDROID_API_O__'
#define __ANDROID_API_O__ 26
                          ^
E:/workspace/android/github-source/hook/HTFix/htfixlib/src/main/jni/HookMain.c:16:5: error: expected identifier
    __ANDROID_API_O_MR1__, // Android 8.1
    ^
E:/workspace/android/android-sdk-windows/ndk-bundle/build//../sysroot/usr/include\android/api-level.h:60:31: note: expanded from macro '__ANDROID_API_O_MR1__'
#define __ANDROID_API_O_MR1__ 27
                              ^
7 errors generated.
make: *** [E:/workspace/android/github-source/hook/HTFix/htfixlib/build/intermediates/ndkBuild/debug/obj/local/arm64-v8a/objs-debug/yahfa/HookMain.o] Error 1
